# piggy-pulse-api

./: .dockerignore  .drone.yml  .env.example  .gitignore  .secrets.baseline  AGENTS.md  API_LIFECYCLE.md  Budget.toml.example  CLAUDE.md  CONFIGURATION.md  Caddyfile  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.cron  GEMINI.md  MANUAL_PRODUCTION_DEPLOY.md  PiggyPulse.toml  PiggyPulse.toml.example  README.md  SECURITY_AUDIT.md  TODO.md  a  ci.sh  docker-compose.test.yaml  docker-compose.yaml  docker-cron-entrypoint.sh  docker-entrypoint.sh  prek.toml  sqlx.toml
.cargo/: audit.toml
.circleci/: config.yml
.claude/: settings.json
.claude/agents/: rust-postgres-consultant.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md
.github/workflows/: claude.yml  conventional-commits.yml  deploy-production.yml  docs.yml  integration.yml  pr-agent.yml  publish-and-deploy-staging.yml  publish-and-deploy.yml  publish-images.yml  rust.yml  schemathesis.yml  test.yml
.hypothesis/constants/: d9956c038cc5f695
ansible/: .gitignore  Makefile  README.md  ansible.cfg  site.yml
deploy/production/: .env.example  Caddyfile  README.md  docker-compose.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  TWO_FACTOR_AUTHENTICATION.md
infra/hetzner/: .gitignore  (+9 more)
migrations/: 0001_init.sql  0002_account.sql  0002_add_transaction_indexes.sql  0003_add_user_id_fks.sql  20260206161618_change_transaction_amount_to_bigint.sql  20260209133125_init.down.sql  20260209133125_init.up.sql  20260209133148_add_indexes.up.sql  20260209133215_security_fixes.down.sql  20260209133215_security_fixes.up.sql  20260209133233_amount_type.down.sql  20260209133233_amount_type.up.sql  20260209163106_add_period_schedule_and_overlays.down.sql  20260209163106_add_period_schedule_and_overlays.up.sql  20260210120001_drop_budget_table.down.sql  20260210120001_drop_budget_table.up.sql  20260210120002_create_settings_table.down.sql  20260210120002_create_settings_table.up.sql  20260211125448_add_password_reset_tables.down.sql  20260211125448_add_password_reset_tables.up.sql  20260212000001_add_two_factor_auth.down.sql  20260212000001_add_two_factor_auth.up.sql  20260213120642_make_currencies_universal_and_add_position.down.sql  20260213120642_make_currencies_universal_and_add_position.up.sql  20260218214000_add_budget_stability_tolerance_to_settings.down.sql  20260218214000_add_budget_stability_tolerance_to_settings.up.sql  20260219220000_add_category_archived_and_description.down.sql  20260219220000_add_category_archived_and_description.up.sql  20260221162814_account_detail_indexes.down.sql  20260221162814_account_detail_indexes.up.sql  20260221233403_add_excluded_to_budget_category.up.sql  20260221233404_add_unique_constraint_budget_category.down.sql  20260222000001_add_vendor_description_and_archived.down.sql  20260222000001_add_vendor_description_and_archived.up.sql  20260222100001_add_settings_profile_and_preferences.down.sql  20260222100001_add_settings_profile_and_preferences.up.sql  20260222100002_add_session_user_agent.down.sql  20260222100002_add_session_user_agent.up.sql  20260226000001_add_login_rate_limits.down.sql  20260226000001_add_login_rate_limits.up.sql  (+50 more)
openapi/: .redocly.lint-ignore.yaml  REDESIGN_API_GAPS.md  redocly.yaml  v2.yaml  v2_full.yaml
schemathesis-report/: junit-20260323T144116Z.xml  junit-20260323T152009Z.xml  junit-20260323T154015Z.xml  junit-20260323T160415Z.xml  junit-20260323T161554Z.xml  junit-20260323T162100Z.xml
scripts/: lint_conventional.py  test-integration.sh
src/: auth.rs  compatibility_adapter.rs  config.rs  cron_tasks.rs  crypto.rs  database.rs  db.rs  dto.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  service.rs  session_dek.rs  test_utils.rs  util.rs
tests/: data_integrity.rs  ledger_properties.rs  v2_accounts.rs  v2_auth.rs  v2_batch_import.rs  v2_cascading_deletes.rs  v2_categories.rs  v2_category_detail.rs  v2_concurrency.rs  v2_currencies.rs  v2_dashboard.rs  v2_dashboard_consistency.rs  v2_health.rs  v2_onboarding.rs  v2_onboarding_templates.rs  v2_overlays.rs  v2_period_boundaries.rs  v2_period_gaps.rs  v2_periods.rs  v2_settings.rs  v2_subscription_accrual.rs  v2_subscriptions.rs  v2_targets.rs  v2_transaction_updates.rs  v2_transactions.rs  v2_unlock.rs  v2_vendor_analytics.rs  v2_vendors.rs
(+765 files in other folders)
