[package]
name = "budget"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
password-hash = "0.5"
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4.28"
async-trait = "0.1.89"
validator = { version = "0.20", features = ["derive"] }
thiserror = "2.0"
# Database access with sqlx
sqlx = { version = "0.8.6", features = ["chrono", "uuid", "migrate", "postgres", "runtime-tokio-rustls", "macros"] }
# OpenAPI/Swagger documentation
rocket_okapi = { version = "0.9", features = ["swagger", "rapidoc"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
okapi = { version = "0.7" }

[dev-dependencies]
proptest = "1.6"
