[package]
name = "piggy-pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
figment = { version = "0.10", features = ["toml", "env"] }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "sync", "time"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4.28"
async-trait = "0.1.89"
validator = { version = "0.20", features = ["derive"] }
regex = "1"
thiserror = "2.0"
zxcvbn = "3.1"
# Email support for password reset
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
# Cryptography for secure token generation
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
# Database access with sqlx
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "uuid", "migrate", "postgres", "runtime-tokio-rustls", "macros"] }
# Two-Factor Authentication
totp-rs = "5.7"
data-encoding = "2.6"
qrcode = "0.14"
aes-gcm = "0.10"
base64 = "0.22"
urlencoding = "2.1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[dev-dependencies]
proptest = "1.11"
